# Real-time_Image_Recognision

./: A  A.cpp  B  B.cpp  C  C.cpp  CMakeCache.txt  CMakeLists.txt  D  D.cpp  Makefile  cmake_install.cmake  dane.hpp  proba  proba.c  setup.cpp
